better root controller